Add missing meal restaurants with operating hours and holidays for all days

--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
                         <a href="https://maps.google.com/?q=くまモンスクエア" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-attraction">景點</span>
                         <div class="reservation-info">
-                            📅 表演時間查詢：<a href="https://kumamon-sq.jp/" target="_blank">kumamon-sq.jp</a>
+                            📅 表演時間查詢：<a href="https://kumamon-sq.jp/" target="_blank">kumamon-sq.jp</a><br>
+                            🕐 營業時間：10:00～19:00<br>
+                            📅 定休日：12/29～1/1
                         </div>
                     </div>
                 </div>
@@ -407,10 +409,12 @@
                          <p class="event-desc">熊本馬肉專門店，品嚐馬肉壽司與馬肉料理，鮮嫩無腥味</p>
                          <a href="https://maps.google.com/?q=馬櫻+銀座通店" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-food">美食</span>
-                         <div class="reservation-info">
-                             📞 預約電話：<a href="tel:096-322-1234">096-322-1234</a><br>
-                             🌐 官網：<a href="https://umasakura.jp/" target="_blank">umasakura.jp</a>
-                         </div>
+                        <div class="reservation-info">
+                            📞 預約電話：<a href="tel:096-322-1234">096-322-1234</a><br>
+                            🌐 官網：<a href="https://umasakura.jp/" target="_blank">umasakura.jp</a><br>
+                            🕐 營業時間：17:00～23:00（L.O. 22:30）<br>
+                            📅 定休日：週日
+                        </div>
                      </div>
                  </div>
 
@@ -469,12 +473,32 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">09:00 - 10:00</div>
+                    <div class="event-time">08:30 - 09:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍳 早餐 & 準備出發</h3>
+                            <h3>🍳 <a href="https://maps.google.com/?q=上乃裏熊本駅前店" target="_blank">早餐：上乃裏 熊本站前店</a></h3>
                         </div>
-                        <p class="event-desc">飯店周邊早餐，整理行李前往租車點</p>
+                        <p class="event-desc">熊本拉麵專門店，品嚐地道熊本豚骨拉麵</p>
+                        <a href="https://maps.google.com/?q=上乃裏熊本駅前店" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">早餐</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：7:00～22:00<br>
+                            📅 定休日：無休
+                        </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">09:45 - 10:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🏨 回飯店取行李，前往租車點</h3>
+                        </div>
+                        <p class="event-desc">整理行李準備出發</p>
                     </div>
                 </div>
 
@@ -942,15 +966,40 @@
                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">17:30 - 18:30</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>💊 <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank">Cosmos Beppu Nakashima 藥妝店</a></h3>
-                        </div>
-                        <p class="event-desc">ドラッグストアコスモス 別府中島店 - 採購日本藥妝與生活用品</p>
-                        <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-shopping">購物</span>
+                 <div class="event">
+                     <div class="event-time">17:30 - 18:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>💊 <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank">Cosmos Beppu Nakashima 藥妝店</a></h3>
+                         </div>
+                         <p class="event-desc">ドラッグストアコスモス 別府中島店 - 採購日本藥妝與生活用品</p>
+                         <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-shopping">購物</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：9:00～22:00<br>
+                             📅 定休日：無休
+                         </div>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">18:45 - 20:15</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍽️ <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank">晚餐：とよ常本店</a></h3>
+                         </div>
+                         <p class="event-desc">別府名物天婦羅定食與新鮮海鮮，距離飯店步行5分鐘</p>
+                         <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：11:30～14:30 / 17:00～21:00<br>
+                             📅 定休日：週三<br>
+                             📞 電話：<a href="tel:0977-23-3457">0977-23-3457</a>
+                         </div>
                      </div>
                  </div>
              </div>
@@ -1019,10 +1068,16 @@
                     <div class="event-time">12:30 - 13:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍽️ 午餐</h3>
+                            <h3>🍽️ <a href="https://maps.google.com/?q=由布まぶし心+由布院" target="_blank">午餐：由布まぶし 心</a></h3>
                         </div>
-                        <p class="event-desc">由布院特色餐廳用餐</p>
+                        <p class="event-desc">由布院名物鰻魚飯三吃，湯之坪街道上的人氣餐廳</p>
+                        <a href="https://maps.google.com/?q=由布まぶし心+由布院" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：11:00～15:00（L.O. 14:30）<br>
+                            📅 定休日：週四<br>
+                            📞 電話：<a href="tel:0977-85-3797">0977-85-3797</a>
+                        </div>
                     </div>
                 </div>
 
@@ -1162,10 +1217,30 @@
                          <div class="event-title">
                              <h3>⛩️ <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank">太宰府天滿宮</a></h3>
                          </div>
-                         <p class="event-desc">學問之神菅原道真公的總本社，必吃梅枝餅</p>
+                         <p class="event-desc">學問之神菅原道真公的總本社，參觀神社並品嚐梅枝餅</p>
                          <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-attraction">景點</span>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約2分鐘（參道）</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">12:30 - 13:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍱 <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank">午餐：かさの家</a></h3>
+                         </div>
+                         <p class="event-desc">太宰府參道名店，梅枝餅與定食套餐，邊參觀邊用餐</p>
+                         <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             🕐 營業時間：9:00～17:00<br>
+                             📅 定休日：不定休<br>
+                             📞 電話：<a href="tel:092-922-1010">092-922-1010</a>
+                         </div>
                      </div>
                  </div>
 
@@ -1197,6 +1272,27 @@
                         <p class="event-desc">辦理入住，放置行李</p>
                         <a href="https://maps.google.com/?q=東横イン博多口駅前" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-hotel">住宿</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約3分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">18:00 - 19:30</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍜 <a href="https://maps.google.com/?q=元祖博多明太重" target="_blank">晚餐：元祖博多明太重</a></h3>
+                        </div>
+                        <p class="event-desc">博多站前明太子專門店，明太子丼飯與定食，距離飯店步行3分鐘</p>
+                        <a href="https://maps.google.com/?q=元祖博多明太重" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：11:00～15:00 / 17:00～21:00<br>
+                            📅 定休日：無休<br>
+                            📞 電話：<a href="tel:092-292-0230">092-292-0230</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1241,7 +1337,27 @@
                         <a href="https://maps.google.com/?q=天神地下街" target="_blank" class="map-link">📍 天神地下街</a>
                         <span class="tag tag-attraction">景點</span>
                         <span class="tag tag-shopping">購物</span>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 市區移動</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">12:00 - 13:00</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍜 <a href="https://maps.google.com/?q=一蘭拉麵総本店" target="_blank">午餐：一蘭拉麵總本店 或 博多一風堂</a></h3>
+                        </div>
+                        <p class="event-desc">經典博多豚骨拉麵，運河城或天神地下街均有分店</p>
+                        <a href="https://maps.google.com/?q=一蘭拉麵総本店" target="_blank" class="map-link">📍 一蘭總本店</a>
+                        <a href="https://maps.google.com/?q=博多一風堂" target="_blank" class="map-link">📍 一風堂</a>
                         <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：10:00～翌日5:00（一蘭總本店24小時）<br>
+                            📅 定休日：無休
+                        </div>
                     </div>
                 </div>
 
