--- a/index.html
+++ b/index.html
@@ -1034,12 +1034,12 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">08:00 - 09:00</div>
+                    <div class="event-time">07:00 - 08:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍳 飯店早餐</h3>
+                            <h3>🍳 飯店早餐 & 退房</h3>
                         </div>
-                        <p class="event-desc">享用超級飯店免費早餐</p>
+                        <p class="event-desc">享用超級飯店免費早餐，整理行李準備出發</p>
                         <span class="tag tag-food">早餐</span>
                     </div>
                 </div>
@@ -1049,14 +1049,20 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">09:40 - 12:10</div>
+                    <div class="event-time">08:50 - 12:10</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🦁 <a href="https://maps.google.com/?q=アフリカンサファリ" target="_blank">九州自然動物園</a></h3>
+                            <h3>🦁 <a href="https://maps.google.com/?q=アフリカンサファリ" target="_blank">九州自然動物園 叢林巴士</a></h3>
                         </div>
-                        <p class="event-desc">搭乘叢林巴士近距離接觸野生動物</p>
+                        <p class="event-desc">搭乘叢林巴士近距離接觸野生動物，體驗野生動物餵食</p>
                         <a href="https://maps.google.com/?q=アフリカンサファリ" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-attraction">景點</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：9:00～17:00（11月～2月至16:00）<br>
+                            📅 定休日：無休<br>
+                            🎫 叢林巴士需提前預約，建議官網預約<br>
+                            🌐 官網：<a href="https://www.africansafari.co.jp/" target="_blank">africansafari.co.jp</a>
+                        </div>
                     </div>
                 </div>
 
