修正麵包店地址、更新租車資訊及重新計算車程距離
- Day 6 麵包店更正為香椎店（福岡市東區香椎1-22-7）
- 更新租車資訊：
  * 取車：TOYOTA 大甲橋店（熊本市中央區新屋敷1-5-16）
  * 還車：TOYOTA 博多站博多口店（福岡市博多區博多站前1-15-20）
  * 預約編號：99914735200
- 重新計算所有自駕天數車程距離並標註公里數：
  * Day 2: 熊本→大津→阿蘇→高千穗（總計約152km）
  * Day 3: 高千穗峽→黑川溫泉（總計約70km）
  * Day 4: 黑川→九重→別府（總計約75km）
  * Day 5: 別府→動物園→由布院（總計約40km）
  * Day 6: 由布院→浮羽→太宰府→香椎→博多（總計約110km）
- 調整 Day 6 行程時間順序（太宰府→香椎麵包店→還車）

--- a/index.html
+++ b/index.html
@@ -573,22 +573,29 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行前往租車點</div>
+                    <div class="transport-line walk">🚶 步行 約8-10分鐘 → TOYOTA 大甲橋店</div>
                 </div>
 
                 <div class="event">
                     <div class="event-time">10:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🚗 取車出發</h3>
+                            <h3>🚗 <a href="https://maps.google.com/?q=1-5-16+Shinyashiki,+Chuo-ku,+Kumamoto,+862-0975" target="_blank">TOYOTA 大甲橋店取車出發</a></h3>
                         </div>
-                        <p class="event-desc">開始自駕之旅，前往阿蘇方向</p>
+                        <p class="event-desc">開始5天自駕之旅，前往阿蘇方向</p>
+                        <a href="https://maps.google.com/?q=1-5-16+Shinyashiki,+Chuo-ku,+Kumamoto,+862-0975" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-transport">交通</span>
+                        <div class="reservation-info">
+                            🚗 <strong>租車公司：</strong>TOYOTA RENT A CAR 大甲橋店<br>
+                            📍 熊本市中央區新屋敷1-5-16<br>
+                            📞 電話：<a href="tel:096-371-0100">096-371-0100</a><br>
+                            🔢 預約編號：99914735200
+                        </div>
                     </div>
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約45-60分鐘 → 大津道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約40分鐘（30km）→ 大津道之驛</div>
                 </div>
 
                 <div class="event">
@@ -604,7 +611,7 @@
                 </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → ごとう屋阿蘇店</div>
+                     <div class="transport-line drive">🚗 開車 約25分鐘（20km）→ ごとう屋阿蘇店</div>
                  </div>
 
                  <div class="event">
@@ -625,7 +632,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約5分鐘 → 阿蘇道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約5分鐘（2km）→ 阿蘇道之驛</div>
                  </div>
 
                 <div class="event">
@@ -647,7 +654,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約15-25分鐘 → 阿蘇山上</div>
+                     <div class="transport-line drive">🚗 開車 約20分鐘（15km）→ 阿蘇山上</div>
                 </div>
 
                 <div class="event">
@@ -667,7 +674,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 草千里</div>
+                     <div class="transport-line drive">🚗 開車 約10分鐘（5km）→ 草千里</div>
                 </div>
 
                 <div class="event">
@@ -687,7 +694,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約1.5-2小時 → 高千穗</div>
+                     <div class="transport-line drive">🚗 開車 約1.5小時（85km）→ 高千穗</div>
                 </div>
 
                 <div class="event">
@@ -794,7 +801,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約10分鐘 → 高千穗峽</div>
+                    <div class="transport-line drive">🚗 開車 約10分鐘（3km）→ 高千穗峽</div>
                 </div>
 
                 <div class="event">
@@ -821,7 +828,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約10分鐘</div>
+                    <div class="transport-line drive">🚗 開車 約10分鐘（3km）</div>
                 </div>
 
                 <div class="event">
@@ -841,7 +848,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘</div>
+                    <div class="transport-line drive">🚗 開車 約5分鐘（2km）</div>
                 </div>
 
                 <div class="event">
@@ -863,7 +870,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約5分鐘</div>
+                    <div class="transport-line drive">🚗 開車 約5分鐘（2km）</div>
                 </div>
 
                 <div class="event">
@@ -885,7 +892,7 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約1.5小時 → 黑川溫泉</div>
+                    <div class="transport-line drive">🚗 開車 約1.5小時（60km）→ 黑川溫泉</div>
                 </div>
 
                 <div class="event">
@@ -975,7 +982,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約40-50分鐘（從黑川）→ 九重夢大吊橋</div>
+                     <div class="transport-line drive">🚗 開車 約35分鐘（25km，從黑川）→ 九重夢大吊橋</div>
                 </div>
 
                 <div class="event">
@@ -996,7 +1003,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約1-1.5小時 → 別府</div>
+                     <div class="transport-line drive">🚗 開車 約50分鐘（40km）→ 別府</div>
                 </div>
 
                  <div class="event">
@@ -1018,7 +1025,7 @@
                  </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 別府纜車站</div>
+                     <div class="transport-line drive">🚗 開車 約15分鐘（8km）→ 別府纜車站</div>
                 </div>
 
                  <div class="event">
@@ -1044,7 +1051,7 @@
                  </div>
 
                 <div class="transport-between">
-                    <div class="transport-line drive">🚗 開車 約10分鐘 → 地獄區域</div>
+                    <div class="transport-line drive">🚗 開車 約10分鐘（5km）→ 地獄區域</div>
                 </div>
 
                  <div class="event">
@@ -1072,7 +1079,7 @@
                  </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約10-15分鐘 → 別府市區</div>
+                     <div class="transport-line drive">🚗 開車 約10分鐘（5km）→ 別府市區</div>
                 </div>
 
                 <div class="event">
@@ -1184,7 +1191,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約40-50分鐘（從別府）→ 九州自然動物園</div>
+                     <div class="transport-line drive">🚗 開車 約35分鐘（25km，從別府）→ 九州自然動物園</div>
                 </div>
 
                 <div class="event">
@@ -1211,7 +1218,7 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約20-30分鐘 → 由布院</div>
+                     <div class="transport-line drive">🚗 開車 約20分鐘（15km）→ 由布院</div>
                 </div>
 
                 <div class="event">
@@ -1347,7 +1354,7 @@
                 </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約1-1.5小時 → 浮羽道之驛</div>
+                     <div class="transport-line drive">🚗 開車 約45分鐘（35km）→ 浮羽道之驛</div>
                  </div>
 
                  <div class="event">
@@ -1369,7 +1376,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約40-50分鐘 → 太宰府</div>
+                     <div class="transport-line drive">🚗 開車 約50分鐘（40km）→ 太宰府</div>
                  </div>
 
                  <div class="event">
@@ -1411,53 +1418,60 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約3分鐘（參道）</div>
+                     <div class="transport-line drive">🚗 開車 約35分鐘（25km）→ 香椎 ぐうぱん麵包店</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">13:45 - 14:30</div>
+                     <div class="event-time">14:20 - 15:00</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🥐 <a href="https://maps.google.com/?q=参道べーかりー+ぐうぱん" target="_blank">参道べーかりー ぐうぱん</a></h3>
+                             <h3>🥐 <a href="https://maps.google.com/?q=1-22-7+Kashii,+Higashi+Ward,+Fukuoka,+813-0011" target="_blank">参道べーかりー ぐうぱん 香椎店</a></h3>
                          </div>
-                         <p class="event-desc">太宰府參道人氣麵包店，選購特色麵包與伴手禮</p>
-                         <a href="https://maps.google.com/?q=参道べーかりー+ぐうぱん" target="_blank" class="map-link">📍 Google Map</a>
+                         <p class="event-desc">福岡人氣麵包店，選購特色麵包與伴手禮</p>
+                         <a href="https://maps.google.com/?q=1-22-7+Kashii,+Higashi+Ward,+Fukuoka,+813-0011" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-food">美食</span>
                          <span class="tag tag-shopping">購物</span>
                          <div class="reservation-info">
                              🕐 營業時間：9:00～18:00<br>
-                             📅 定休日：不定休
+                             📅 定休日：不定休<br>
+                             📍 地址：福岡市東區香椎1-22-7 並木大樓104A
                          </div>
                      </div>
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約30-40分鐘 → 福岡還車點</div>
+                     <div class="transport-line drive">🚗 開車 約20分鐘（10km）→ 博多站還車點</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">15:30 - 18:30</div>
+                     <div class="event-time">15:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🚗 <a href="https://maps.google.com/?q=博多站博多口店+TOYOTA" target="_blank">博多站博多口店還車</a></h3>
+                         </div>
+                         <p class="event-desc">歸還租車至 TOYOTA 博多站博多口店，結束5天自駕行程</p>
+                         <a href="https://maps.google.com/?q=1-15-20+Hakataekimae,+Hakata+Ward,+Fukuoka,+812-0011" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-transport">交通</span>
+                         <div class="reservation-info">
+                             🚗 <strong>還車地點：</strong>TOYOTA 博多站博多口店<br>
+                             📍 福岡市博多區博多站前1-15-20 NMF博多站前大樓1F<br>
+                             📞 電話：待確認
+                         </div>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line walk">🚶 步行 約5分鐘 → 博多站周邊</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">15:45 - 18:30</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🏙️ 福岡市區自由活動</h3>
                          </div>
-                         <p class="event-desc">前往福岡市區，博多站、天神等地自由逛街購物</p>
+                         <p class="event-desc">博多站周邊、天神等地自由逛街購物</p>
                          <span class="tag tag-shopping">購物</span>
-                     </div>
-                 </div>
-
-                 <div class="transport-between">
-                     <div class="transport-line walk">🚶 前往還車點</div>
-                 </div>
-
-                 <div class="event">
-                     <div class="event-time">18:30</div>
-                     <div class="event-card">
-                         <div class="event-title">
-                             <h3>🚗 福岡還車</h3>
-                         </div>
-                         <p class="event-desc">歸還租車，結束5天自駕行程</p>
-                         <span class="tag tag-transport">交通</span>
                      </div>
                  </div>
 
