為所有停車場資訊增加 Google Map 連結
- 阿蘇山上廣場停車場
- 草千里觀景台停車場
- 高千穗峽公共停車場
- 高千穗天照鐵道停車場
- 九重夢大吊橋停車場
- 別府纜車站停車場
- 別府地獄巡禮停車場（海地獄、鬼石坊主地獄、鬼山地獄）
- 九州自然動物園停車場
- 太宰府駐車中心

所有停車場名稱現在都可以直接點擊開啟 Google Map 導航

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
                         <a href="https://maps.google.com/?q=阿蘇山火口" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-nature">自然景觀</span>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>阿蘇山上廣場停車場（免費）<br>
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=阿蘇山上広場駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">阿蘇山上廣場停車場</a>（免費）<br>
                             💴 火山口接駁車：往返 ¥1,300（大人）、¥650（兒童）
                         </div>
                     </div>
@@ -687,7 +687,7 @@
                         <a href="https://maps.google.com/?q=草千里ヶ浜" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-nature">自然景觀</span>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>草千里觀景台停車場（免費）<br>
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=草千里ヶ浜駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">草千里觀景台停車場</a>（免費）<br>
                             ⏱️ 可停留時間：不限
                         </div>
                     </div>
@@ -820,7 +820,7 @@
                             ⚠️ 冬季可能因天候暫停，請事先確認
                         </div>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>高千穗峽公共停車場<br>
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=高千穂峡駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">高千穗峽公共停車場</a><br>
                             💴 停車費：¥500／次（約可停留2小時）<br>
                             ⚠️ 旺季可能客滿，建議早上抵達
                         </div>
@@ -864,7 +864,7 @@
                             🌐 時刻表查詢：<a href="https://amaterasu-railway.jp/" target="_blank">amaterasu-railway.jp</a>
                         </div>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>高千穗天照鐵道停車場（免費）
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=高千穂あまてらす鉄道駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">高千穗天照鐵道停車場</a>（免費）
                         </div>
                     </div>
                 </div>
@@ -995,7 +995,7 @@
                         <a href="https://maps.google.com/?q=九重夢大吊橋" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-nature">自然景觀</span>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>九重夢大吊橋停車場<br>
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=九重夢大吊橋駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">九重夢大吊橋停車場</a><br>
                             💴 停車費：¥300（普通車）<br>
                             💰 入場費：¥500（大人）、¥200（兒童）
                         </div>
@@ -1044,7 +1044,7 @@
                              🌐 官網：<a href="https://www.beppu.co.jp/zh/" target="_blank">beppu.co.jp</a>
                          </div>
                          <div class="parking-info">
-                             🅿️ <strong>停車場：</strong>別府纜車站停車場（免費）<br>
+                             🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=別府ロープウェイ駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">別府纜車站停車場</a>（免費）<br>
                              📍 位置：纜車站旁，約100個車位
                          </div>
                      </div>
@@ -1072,7 +1072,7 @@
                          </div>
                          <div class="parking-info">
                              🅿️ <strong>停車場：</strong>各地獄均設有免費停車場<br>
-                             📍 海地獄、鬼石坊主地獄、鬼山地獄等皆有專屬停車場<br>
+                             📍 <a href="https://maps.google.com/?q=海地獄駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">海地獄停車場</a>、<a href="https://maps.google.com/?q=鬼石坊主地獄駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">鬼石坊主地獄停車場</a>、<a href="https://maps.google.com/?q=鬼山地獄駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">鬼山地獄停車場</a>等<br>
                              ⏱️ 建議預留2小時遊覽時間
                          </div>
                      </div>
@@ -1210,7 +1210,7 @@
                             🌐 官網：<a href="https://www.africansafari.co.jp/" target="_blank">africansafari.co.jp</a>
                         </div>
                         <div class="parking-info">
-                            🅿️ <strong>停車場：</strong>九州自然動物園停車場（免費）<br>
+                            🅿️ <strong>停車場：</strong><a href="https://maps.google.com/?q=アフリカンサファリ駐車場" target="_blank" style="color: #1B5E20; text-decoration: underline;">九州自然動物園停車場</a>（免費）<br>
                             💰 入園費：¥2,600（大人）、¥1,500（兒童 4-中學生）<br>
                             🚌 叢林巴士：¥1,300（大人）、¥900（兒童）另計
                         </div>
@@ -1391,7 +1391,7 @@
                          <div class="parking-info">
                              🅿️ <strong>停車場：</strong>太宰府天滿宮周邊有多個付費停車場<br>
                              💴 停車費：約 ¥500/次（2-3小時）<br>
-                             📍 推薦：太宰府駐車中心（距參道入口步行2分鐘）
+                             📍 推薦：<a href="https://maps.google.com/?q=太宰府駐車センター" target="_blank" style="color: #1B5E20; text-decoration: underline;">太宰府駐車中心</a>（距參道入口步行2分鐘）
                          </div>
                      </div>
                  </div>
