--- a/index.html
+++ b/index.html
@@ -1492,22 +1492,22 @@
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約3分鐘</div>
+                    <div class="transport-line walk">🚶 步行或搭車前往聚餐地點</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">19:00 - 20:30</div>
+                    <div class="event-time">19:00 - 21:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍜 <a href="https://maps.google.com/?q=元祖博多明太重" target="_blank">晚餐：元祖博多明太重</a></h3>
+                            <h3>🍽️ 晚餐：與青蓉聚餐</h3>
                         </div>
-                        <p class="event-desc">博多站前明太子專門店，明太子丼飯與定食，距離飯店步行3分鐘</p>
-                        <a href="https://maps.google.com/?q=元祖博多明太重" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">與朋友青蓉在福岡聚餐，享用美食敘舊</p>
                         <span class="tag tag-food">美食</span>
+                        <span class="tag tag-reservation">聚餐</span>
                         <div class="reservation-info">
-                            🕐 營業時間：11:00～15:00 / 17:00～21:00<br>
-                            📅 定休日：無休<br>
-                            📞 電話：<a href="tel:092-292-0230">092-292-0230</a>
+                            👥 與青蓉聚餐<br>
+                            📍 餐廳地點待確認<br>
+                            ⏰ 時間：19:00-21:00
                         </div>
                     </div>
                 </div>
@@ -1528,10 +1528,10 @@
                      <tr><td>🍱 午餐 かさの家</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🥐 ぐうぱん麵包</td><td>¥2,000 (約 NT$ 440)</td></tr>
                      <tr><td>🏙️ 福岡市區購物</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
-                     <tr><td>🍜 晚餐 博多明太重</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
+                     <tr><td>🍽️ 晚餐 與青蓉聚餐</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
                      <tr><td>🅿️ 停車費（太宰府）</td><td>¥500 (約 NT$ 110)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 9,130（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 9,570（不含住宿）</div>
              </div>
          </div>
 
