將 Day 6 晚餐時間改為時間未定
- 與青蓉聚餐時間從固定的 19:00-21:00 改為「時間未定」
- 方便後續與青蓉協調確認具體時間
- 餐廳地點仍為待確認

--- a/index.html
+++ b/index.html
@@ -1496,7 +1496,7 @@
                 </div>
 
                 <div class="event">
-                    <div class="event-time">19:00 - 21:00</div>
+                    <div class="event-time">時間未定</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍽️ 晚餐：與青蓉聚餐</h3>
@@ -1507,7 +1507,7 @@
                         <div class="reservation-info">
                             👥 與青蓉聚餐<br>
                             📍 餐廳地點待確認<br>
-                            ⏰ 時間：19:00-21:00
+                            ⏰ 時間未定
                         </div>
                     </div>
                 </div>
