--- a/index.html
+++ b/index.html
@@ -1320,28 +1320,45 @@
             </div>
              <div class="timeline">
                  <div class="event">
-                     <div class="event-time">08:00 - 09:00</div>
+                     <div class="event-time">09:30</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🍳 <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank">早餐：湯之坪街道餐點</a></h3>
+                             <h3>🏨 <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank">退房 Check Out</a></h3>
                          </div>
-                         <p class="event-desc">在湯之坪街道享用特色早餐，體驗由布院當地風情</p>
-                         <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank" class="map-link">📍 Google Map</a>
-                         <span class="tag tag-food">早餐</span>
+                         <p class="event-desc">辦理退房手續，準備前往由布院市區</p>
+                         <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-hotel">住宿</span>
                      </div>
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約5分鐘 → 由布院道之驛</div>
+                     <div class="transport-line walk">🚶 步行 約5分鐘 → 湯之坪街道</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">09:00 - 09:30</div>
+                     <div class="event-time">09:30 - 10:30</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍳 <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank">早餐 & 逛湯之坪街道</a></h3>
+                         </div>
+                         <p class="event-desc">在湯之坪街道享用早餐，漫步特色商店街，最後巡禮由布院</p>
+                         <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank" class="map-link">📍 Google Map</a>
+                         <span class="tag tag-food">早餐</span>
+                         <span class="tag tag-shopping">購物</span>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約5分鐘 → 由布院道之驛</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">10:40 - 11:00</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🚏 <a href="https://maps.google.com/?q=道の駅ゆふいん" target="_blank">由布院道之驛</a></h3>
                         </div>
-                        <p class="event-desc">最後巡禮由布院，採購伴手禮（停留約30分鐘）</p>
+                        <p class="event-desc">採購由布院伴手禮（停留約20分鐘）</p>
                         <a href="https://maps.google.com/?q=道の駅ゆふいん" target="_blank" class="map-link">📍 Google Map</a>
                         <div class="reservation-info">
                             🎁 推薦必買伴手禮：<br>
@@ -1358,7 +1375,7 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">10:30 - 11:00</div>
+                     <div class="event-time">11:50 - 12:20</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🚏 <a href="https://maps.google.com/?q=道の駅うきは" target="_blank">浮羽道之驛</a></h3>
@@ -1376,11 +1393,30 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約50分鐘（40km）→ 太宰府</div>
+                     <div class="transport-line drive">🚗 開車 約20分鐘 → 久留米或浮羽午餐</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">11:40 - 13:40</div>
+                     <div class="event-time">12:45 - 13:45</div>
+                     <div class="event-card">
+                         <div class="event-title">
+                             <h3>🍱 午餐（久留米或浮羽地區）</h3>
+                         </div>
+                         <p class="event-desc">在前往太宰府前先用午餐，享用福岡縣當地美食</p>
+                         <span class="tag tag-food">美食</span>
+                         <div class="reservation-info">
+                             🍜 推薦選擇：久留米豚骨拉麵或當地定食<br>
+                             📍 地點可依當時狀況選擇
+                         </div>
+                     </div>
+                 </div>
+
+                 <div class="transport-between">
+                     <div class="transport-line drive">🚗 開車 約30分鐘（30km）→ 太宰府</div>
+                 </div>
+
+                 <div class="event">
+                     <div class="event-time">14:20 - 15:50</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>⛩️ <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank">太宰府天滿宮</a></h3>
@@ -1397,32 +1433,11 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約2分鐘（參道）</div>
-                 </div>
-
-                 <div class="event">
-                     <div class="event-time">12:30 - 13:30</div>
-                     <div class="event-card">
-                         <div class="event-title">
-                             <h3>🍱 <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank">午餐：かさの家</a></h3>
-                         </div>
-                         <p class="event-desc">太宰府參道名店，梅枝餅與定食套餐，邊參觀邊用餐</p>
-                         <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank" class="map-link">📍 Google Map</a>
-                         <span class="tag tag-food">美食</span>
-                         <div class="reservation-info">
-                             🕐 營業時間：9:00～17:00<br>
-                             📅 定休日：不定休<br>
-                             📞 電話：<a href="tel:092-922-1010">092-922-1010</a>
-                         </div>
-                     </div>
-                 </div>
-
-                 <div class="transport-between">
                      <div class="transport-line drive">🚗 開車 約35分鐘（25km）→ 香椎 ぐうぱん麵包店</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">14:20 - 15:00</div>
+                     <div class="event-time">16:00 - 17:00</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🥐 <a href="https://maps.google.com/?q=1-22-7+Kashii,+Higashi+Ward,+Fukuoka,+813-0011" target="_blank">参道べーかりー ぐうぱん 香椎店</a></h3>
@@ -1444,7 +1459,7 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">15:30</div>
+                     <div class="event-time">17:30</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🚗 <a href="https://maps.google.com/?q=博多站博多口店+TOYOTA" target="_blank">博多站博多口店還車</a></h3>
@@ -1465,7 +1480,7 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">15:45 - 18:30</div>
+                     <div class="event-time">17:45 - 18:30</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🏙️ 福岡市區自由活動</h3>
@@ -1522,16 +1537,16 @@
              <div class="budget-card">
                  <h4>💰 Day 6 預算估算（4人）</h4>
                  <table>
-                     <tr><td>🍳 早餐 湯之坪街道</td><td>¥4,000 (約 NT$ 880)</td></tr>
+                     <tr><td>🍳 早餐 & 逛湯之坪街道</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                      <tr><td>⛽ 油費（當日估算）</td><td>¥3,000 (約 NT$ 660)</td></tr>
                      <tr><td>🛍️ 道之驛伴手禮（由布院+浮羽）</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
-                     <tr><td>🍱 午餐 かさの家</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
+                     <tr><td>🍜 午餐（久留米或浮羽）</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🥐 ぐうぱん麵包</td><td>¥2,000 (約 NT$ 440)</td></tr>
                      <tr><td>🏙️ 福岡市區購物</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
                      <tr><td>🍽️ 晚餐 與青蓉聚餐</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
                      <tr><td>🅿️ 停車費（太宰府）</td><td>¥500 (約 NT$ 110)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 9,570（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 9,790（不含住宿）</div>
              </div>
          </div>
 
