--- a/index.html
+++ b/index.html
@@ -1393,30 +1393,33 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約20分鐘 → 久留米或浮羽午餐</div>
+                     <div class="transport-line drive">🚗 開車 約50分鐘（40km）→ 太宰府</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">12:45 - 13:45</div>
+                     <div class="event-time">12:40 - 13:40</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🍱 午餐（久留米或浮羽地區）</h3>
+                             <h3>🍱 <a href="https://maps.google.com/?q=太宰府+餐廳" target="_blank">午餐：太宰府附近餐廳</a></h3>
                          </div>
-                         <p class="event-desc">在前往太宰府前先用午餐，享用福岡縣當地美食</p>
+                         <p class="event-desc">在太宰府參道或周邊享用午餐，可選擇梅枝餅、烏龍麵或定食</p>
+                         <a href="https://maps.google.com/?q=太宰府+餐廳" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-food">美食</span>
                          <div class="reservation-info">
-                             🍜 推薦選擇：久留米豚骨拉麵或當地定食<br>
-                             📍 地點可依當時狀況選擇
+                             🍜 推薦選擇：<br>
+                             • かさの家（梅枝餅與定食）<br>
+                             • 太宰府參道烏龍麵店<br>
+                             • 或其他參道餐廳
                          </div>
                      </div>
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約30分鐘（30km）→ 太宰府</div>
+                     <div class="transport-line walk">🚶 步行 約2-5分鐘 → 太宰府天滿宮</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">14:20 - 15:50</div>
+                     <div class="event-time">13:45 - 15:15</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>⛩️ <a href="https://maps.google.com/?q=太宰府天満宮" target="_blank">太宰府天滿宮</a></h3>
@@ -1433,7 +1436,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約35分鐘（25km）→ 香椎 ぐうぱん麵包店</div>
+                     <div class="transport-line drive">🚗 開車 約40分鐘（25km）→ 香椎 ぐうぱん麵包店</div>
                  </div>
 
                  <div class="event">
@@ -1459,7 +1462,7 @@
                  </div>
 
                  <div class="event">
-                     <div class="event-time">17:30</div>
+                     <div class="event-time">18:00</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>🚗 <a href="https://maps.google.com/?q=博多站博多口店+TOYOTA" target="_blank">博多站博多口店還車</a></h3>
@@ -1476,22 +1479,7 @@
                  </div>
 
                  <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約5分鐘 → 博多站周邊</div>
-                 </div>
-
-                 <div class="event">
-                     <div class="event-time">17:45 - 18:30</div>
-                     <div class="event-card">
-                         <div class="event-title">
-                             <h3>🏙️ 福岡市區自由活動</h3>
-                         </div>
-                         <p class="event-desc">博多站周邊、天神等地自由逛街購物</p>
-                         <span class="tag tag-shopping">購物</span>
-                     </div>
-                 </div>
-
-                 <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約10分鐘</div>
+                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
                  </div>
 
                  <div class="event">
@@ -1540,13 +1528,12 @@
                      <tr><td>🍳 早餐 & 逛湯之坪街道</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                      <tr><td>⛽ 油費（當日估算）</td><td>¥3,000 (約 NT$ 660)</td></tr>
                      <tr><td>🛍️ 道之驛伴手禮（由布院+浮羽）</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
-                     <tr><td>🍜 午餐（久留米或浮羽）</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
-                     <tr><td>🥐 ぐうぱん麵包</td><td>¥2,000 (約 NT$ 440)</td></tr>
-                     <tr><td>🏙️ 福岡市區購物</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
-                     <tr><td>🍽️ 晚餐 與青蓉聚餐</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
+                     <tr><td>🍜 午餐（太宰府）</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🅿️ 停車費（太宰府）</td><td>¥500 (約 NT$ 110)</td></tr>
+                     <tr><td>🥐 ぐうぱん麵包</td><td>¥2,000 (約 NT$ 440)</td></tr>
+                     <tr><td>🍽️ 晚餐 與青蓉聚餐</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 9,790（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 7,590（不含住宿）</div>
              </div>
          </div>
 
