--- a/index.html
+++ b/index.html
@@ -835,10 +835,10 @@
                     <div class="event-time">11:30 - 12:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍜 <a href="https://maps.google.com/?q=千穂の家" target="_blank">午餐：高千穗流水麵</a></h3>
+                            <h3>🍜 <a href="https://maps.google.com/?q=ともえまる食堂+高千穂" target="_blank">午餐：ともえまる食堂 高千穂</a></h3>
                         </div>
-                        <p class="event-desc">體驗傳統流水素麵，清涼消暑的特色美食</p>
-                        <a href="https://maps.google.com/?q=千穂の家" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">高千穗在地人氣食堂，品嚐正宗日式定食</p>
+                        <a href="https://maps.google.com/?q=ともえまる食堂+高千穂" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-food">美食</span>
                         <div class="reservation-info">
                             🕐 營業時間：11:00～15:00<br>
@@ -941,7 +941,7 @@
                  <table>
                      <tr><td>⛽ 油費（當日估算）</td><td>¥2,500 (約 NT$ 550)</td></tr>
                      <tr><td>🚣 高千穗峽划船</td><td>¥4,000 (約 NT$ 880)</td></tr>
-                     <tr><td>🍜 午餐 流水素麵</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
+                     <tr><td>🍜 午餐 ともえまる食堂</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🚂 天照鐵道小火車（2大2小）</td><td>¥4,000 (約 NT$ 880)</td></tr>
                      <tr><td>🛍️ 道之驛伴手禮</td><td>¥3,000 (約 NT$ 660)</td></tr>
                      <tr><td>🅿️ 停車費</td><td>¥500 (約 NT$ 110)</td></tr>
@@ -1082,24 +1082,8 @@
                      <div class="transport-line drive">🚗 開車 約10分鐘（5km）→ 別府市區</div>
                 </div>
 
-                <div class="event">
-                    <div class="event-time">17:10</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🏨 <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank">入住別府站前超級飯店</a></h3>
-                        </div>
-                        <p class="event-desc">辦理入住，放置行李</p>
-                        <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-hotel">住宿</span>
-                    </div>
-                </div>
-
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
-                </div>
-
                  <div class="event">
-                     <div class="event-time">17:30 - 18:30</div>
+                     <div class="event-time">17:10 - 18:10</div>
                      <div class="event-card">
                          <div class="event-title">
                              <h3>💊 <a href="https://maps.google.com/?q=ドラッグストアコスモス+別府中島店" target="_blank">Cosmos Beppu Nakashima 藥妝店</a></h3>
@@ -1114,23 +1098,38 @@
                      </div>
                  </div>
 
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">18:20</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🏨 <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank">入住別府站前超級飯店</a></h3>
+                        </div>
+                        <p class="event-desc">辦理入住，放置行李</p>
+                        <a href="https://maps.google.com/?q=スーパーホテル別府駅前" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-hotel">住宿</span>
+                    </div>
+                </div>
+
                  <div class="transport-between">
-                     <div class="transport-line walk">🚶 步行 約5分鐘</div>
+                     <div class="transport-line walk">🚶 步行 約3分鐘</div>
                  </div>
 
                  <div class="event">
-                     <div class="event-time">18:45 - 20:15</div>
+                     <div class="event-time">18:45 - 20:00</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🍽️ <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank">晚餐：とよ常本店</a></h3>
+                             <h3>🍜 <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank">晚餐：大陸拉麵</a></h3>
                          </div>
-                         <p class="event-desc">別府名物天婦羅定食與新鮮海鮮，距離飯店步行5分鐘</p>
-                         <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank" class="map-link">📍 Google Map</a>
+                         <p class="event-desc">別府在地人氣拉麵店，濃郁豚骨湯頭</p>
+                         <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank" class="map-link">📍 Google Map</a>
                          <span class="tag tag-food">美食</span>
                          <div class="reservation-info">
-                             🕐 營業時間：11:30～14:30 / 17:00～21:00<br>
-                             📅 定休日：週三<br>
-                             📞 電話：<a href="tel:0977-23-3457">0977-23-3457</a>
+                             🕐 營業時間：11:00～21:00<br>
+                             📅 定休日：不定休
                          </div>
                      </div>
                  </div>
@@ -1153,9 +1152,9 @@
                      <tr><td>🚡 別府纜車（2大2小）</td><td>¥5,400 (約 NT$ 1,190)</td></tr>
                      <tr><td>🔥 地獄巡禮（2大2小）</td><td>¥1,200 (約 NT$ 265)</td></tr>
                      <tr><td>💊 Cosmos 藥妝購物</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
-                     <tr><td>🍽️ 晚餐 とよ常天婦羅</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
+                     <tr><td>🍜 晚餐 大陸拉麵</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 7,440（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 6,340（不含住宿）</div>
              </div>
          </div>
 
