--- a/index.html
+++ b/index.html
@@ -1122,14 +1122,23 @@
                      <div class="event-time">18:45 - 20:00</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🍜 <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank">晚餐：大陸拉麵</a></h3>
+                             <h3>🍜 <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank">晚餐：大陸拉麵</a> 或 <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank">天丼 とよ常本店</a></h3>
                          </div>
-                         <p class="event-desc">別府在地人氣拉麵店，濃郁豚骨湯頭</p>
-                         <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank" class="map-link">📍 Google Map</a>
+                         <p class="event-desc">選項1：大陸拉麵 - 別府在地人氣拉麵店，濃郁豚骨湯頭</p>
+                         <p class="event-desc">選項2：とよ常本店 - 別府名物天婦羅定食與新鮮海鮮</p>
+                         <a href="https://maps.google.com/?q=大陸ラーメン+別府" target="_blank" class="map-link">📍 大陸拉麵</a>
+                         <a href="https://maps.google.com/?q=とよ常本店+別府" target="_blank" class="map-link">📍 とよ常本店</a>
                          <span class="tag tag-food">美食</span>
                          <div class="reservation-info">
+                             <strong>大陸拉麵：</strong><br>
                              🕐 營業時間：11:00～21:00<br>
-                             📅 定休日：不定休
+                             📅 定休日：不定休<br>
+                             💰 預算：約 ¥5,000（4人）<br><br>
+                             <strong>とよ常本店：</strong><br>
+                             🕐 營業時間：11:30～14:30 / 17:00～21:00<br>
+                             📅 定休日：週三<br>
+                             📞 電話：<a href="tel:0977-23-3457">0977-23-3457</a><br>
+                             💰 預算：約 ¥10,000（4人）
                          </div>
                      </div>
                  </div>
@@ -1152,9 +1161,9 @@
                      <tr><td>🚡 別府纜車（2大2小）</td><td>¥5,400 (約 NT$ 1,190)</td></tr>
                      <tr><td>🔥 地獄巡禮（2大2小）</td><td>¥1,200 (約 NT$ 265)</td></tr>
                      <tr><td>💊 Cosmos 藥妝購物</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
-                     <tr><td>🍜 晚餐 大陸拉麵</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
+                     <tr><td>🍜 晚餐（大陸拉麵或とよ常）</td><td>¥5,000-10,000 (約 NT$ 1,100-2,200)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 6,340（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 6,340-7,440（不含住宿，依晚餐選擇而定）</div>
              </div>
          </div>
 
