--- a/index.html
+++ b/index.html
@@ -543,32 +543,24 @@
             </div>
             <div class="timeline">
                 <div class="event">
-                    <div class="event-time">08:30 - 09:30</div>
+                    <div class="event-time">08:00 - 09:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍳 <a href="https://maps.google.com/?q=上乃裏熊本駅前店" target="_blank">早餐：上乃裏 熊本站前店</a></h3>
+                            <h3>🍳 飯店內便利商店早餐</h3>
                         </div>
-                        <p class="event-desc">熊本拉麵專門店，品嚐地道熊本豚骨拉麵</p>
-                        <a href="https://maps.google.com/?q=上乃裏熊本駅前店" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">在飯店內享用便利商店購買的早餐</p>
                         <span class="tag tag-food">早餐</span>
-                        <div class="reservation-info">
-                            🕐 營業時間：7:00～22:00<br>
-                            📅 定休日：無休
-                        </div>
                     </div>
                 </div>
 
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約5分鐘</div>
-                </div>
-
                 <div class="event">
-                    <div class="event-time">09:45 - 10:00</div>
+                    <div class="event-time">09:00 - 10:00</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🏨 回飯店取行李，前往租車點</h3>
+                            <h3>🏨 整理行李、退房</h3>
                         </div>
-                        <p class="event-desc">整理行李準備出發</p>
+                        <p class="event-desc">10:00 辦理退房手續</p>
+                        <span class="tag tag-hotel">退房</span>
                     </div>
                 </div>
 
@@ -757,7 +749,7 @@
              <div class="budget-card">
                  <h4>💰 Day 2 預算估算（4人）</h4>
                  <table>
-                     <tr><td>🍳 早餐 上乃裏</td><td>¥4,000 (約 NT$ 880)</td></tr>
+                     <tr><td>🍳 早餐 便利商店</td><td>¥1,500 (約 NT$ 330)</td></tr>
                      <tr><td>🚗 租車（5天總費用分攤）</td><td>約 NT$ 2,000</td></tr>
                      <tr><td>⛽ 油費（當日估算）</td><td>¥2,000 (約 NT$ 440)</td></tr>
                      <tr><td>🌋 阿蘇火山口接駁車（2大2小）</td><td>¥3,900 (約 NT$ 860)</td></tr>
@@ -765,7 +757,7 @@
                      <tr><td>🥩 晚餐 高千穗牛燒肉</td><td>¥15,000 (約 NT$ 3,300)</td></tr>
                      <tr><td>🅿️ 停車費</td><td>¥500 (約 NT$ 110)</td></tr>
                  </table>
-                 <div class="budget-total">當日小計：約 NT$ 9,350（不含住宿）</div>
+                 <div class="budget-total">當日小計：約 NT$ 8,800（不含住宿）</div>
              </div>
          </div>
 
