--- a/index.html
+++ b/index.html
@@ -1218,70 +1218,84 @@
                 </div>
 
                 <div class="transport-between">
-                     <div class="transport-line drive">🚗 開車 約20分鐘（15km）→ 由布院</div>
+                     <div class="transport-line drive">🚗 開車 約20分鐘（15km）→ 溫柔之鄉</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">12:30 - 13:30</div>
+                    <div class="event-time">12:30</div>
                     <div class="event-card">
                         <div class="event-title">
-                            <h3>🍽️ <a href="https://maps.google.com/?q=由布まぶし心+由布院" target="_blank">午餐：由布まぶし 心</a></h3>
+                            <h3>🏨 <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank">溫柔之鄉停車寄放行李</a></h3>
                         </div>
-                        <p class="event-desc">由布院名物鰻魚飯三吃，湯之坪街道上的人氣餐廳</p>
-                        <a href="https://maps.google.com/?q=由布まぶし心+由布院" target="_blank" class="map-link">📍 Google Map</a>
-                        <span class="tag tag-food">美食</span>
-                        <div class="reservation-info">
-                            🕐 營業時間：11:00～15:00（L.O. 14:30）<br>
-                            📅 定休日：週四<br>
-                            📞 電話：<a href="tel:0977-85-3797">0977-85-3797</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行 約10分鐘</div>
-                </div>
-
-                <div class="event">
-                    <div class="event-time">13:45</div>
-                    <div class="event-card">
-                        <div class="event-title">
-                            <h3>🏨 入住溫柔之鄉</h3>
-                        </div>
-                        <p class="event-desc">辦理入住，放置行李</p>
+                        <p class="event-desc">先到旅館停車並寄放行李，輕鬆遊覽由布院</p>
                         <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank" class="map-link">📍 Google Map</a>
                         <span class="tag tag-hotel">住宿</span>
                     </div>
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行漫遊湯之坪街道</div>
+                    <div class="transport-line walk">🚶 步行 約5分鐘 → 金鱗湖本店</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">14:00 - 16:00</div>
+                    <div class="event-time">12:45 - 13:45</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🍽️ <a href="https://maps.google.com/?q=由布まぶし心+金鱗湖本店" target="_blank">午餐：由布まぶし「心」金鱗湖本店</a></h3>
+                        </div>
+                        <p class="event-desc">由布院名物鰻魚飯三吃，金鱗湖畔的絕美景觀餐廳</p>
+                        <a href="https://maps.google.com/?q=由布まぶし心+金鱗湖本店" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-food">美食</span>
+                        <div class="reservation-info">
+                            🕐 營業時間：11:00～15:00（L.O. 14:30）<br>
+                            📅 定休日：週四<br>
+                            📞 電話：<a href="tel:0977-85-3797">0977-85-3797</a><br>
+                            📍 金鱗湖本店（非湯之坪街道店）
+                        </div>
+                    </div>
+                </div>
+
+                <div class="transport-between">
+                    <div class="transport-line walk">🚶 步行漫遊金鱗湖與湯之坪街道</div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">14:00 - 16:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🌅 <a href="https://maps.google.com/?q=金鱗湖" target="_blank">金鱗湖 / 湯之坪街道</a></h3>
                         </div>
-                        <p class="event-desc">漫步夢幻金鱗湖，逛逛湯之坪特色小店</p>
-                        <a href="https://maps.google.com/?q=金鱗湖" target="_blank" class="map-link">📍 Google Map</a>
+                        <p class="event-desc">漫步夢幻金鱗湖，逛逛湯之坪特色小店與伴手禮</p>
+                        <a href="https://maps.google.com/?q=金鱗湖" target="_blank" class="map-link">📍 金鱗湖</a>
+                        <a href="https://maps.google.com/?q=湯の坪街道+由布院" target="_blank" class="map-link">📍 湯之坪街道</a>
                         <span class="tag tag-nature">自然景觀</span>
                         <span class="tag tag-shopping">購物</span>
                     </div>
                 </div>
 
                 <div class="transport-between">
-                    <div class="transport-line walk">🚶 步行回旅館 約15分鐘</div>
+                    <div class="transport-line walk">🚶 步行回旅館 約10分鐘</div>
                 </div>
 
                 <div class="event">
-                    <div class="event-time">17:00</div>
+                    <div class="event-time">16:45</div>
+                    <div class="event-card">
+                        <div class="event-title">
+                            <h3>🏨 回溫柔之鄉辦理入住</h3>
+                        </div>
+                        <p class="event-desc">正式辦理入住手續，進房休息</p>
+                        <a href="https://maps.google.com/?q=やわらぎの郷やどや" target="_blank" class="map-link">📍 Google Map</a>
+                        <span class="tag tag-hotel">住宿</span>
+                    </div>
+                </div>
+
+                <div class="event">
+                    <div class="event-time">17:30</div>
                     <div class="event-card">
                         <div class="event-title">
                             <h3>🍽️ 旅館晚餐</h3>
                         </div>
-                        <p class="event-desc">享用旅館精緻晚餐</p>
+                        <p class="event-desc">享用溫柔之鄉精緻晚餐</p>
                         <span class="tag tag-food">晚餐</span>
                      </div>
                  </div>
