--- a/index.html
+++ b/index.html
@@ -1414,16 +1414,22 @@
                      <div class="event-time">12:40 - 13:40</div>
                      <div class="event-card">
                          <div class="event-title">
-                             <h3>🍱 <a href="https://maps.google.com/?q=太宰府+餐廳" target="_blank">午餐：太宰府附近餐廳</a></h3>
+                             <h3>🍱 <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank">午餐：かさの家</a> 或 <a href="https://maps.google.com/?q=さいふうどん+太宰府" target="_blank">さいふうどん</a></h3>
                          </div>
-                         <p class="event-desc">在太宰府參道或周邊享用午餐，可選擇梅枝餅、烏龍麵或定食</p>
-                         <a href="https://maps.google.com/?q=太宰府+餐廳" target="_blank" class="map-link">📍 Google Map</a>
+                         <p class="event-desc">選項1：かさの家 - 太宰府名物梅枝餅與定食</p>
+                         <p class="event-desc">選項2：さいふうどん - 太宰府烏龍麵專門店</p>
+                         <a href="https://maps.google.com/?q=かさの家+太宰府" target="_blank" class="map-link">📍 かさの家</a>
+                         <a href="https://maps.google.com/?q=さいふうどん+太宰府" target="_blank" class="map-link">📍 さいふうどん</a>
                          <span class="tag tag-food">美食</span>
                          <div class="reservation-info">
-                             🍜 推薦選擇：<br>
-                             • かさの家（梅枝餅與定食）<br>
-                             • 太宰府參道烏龍麵店<br>
-                             • 或其他參道餐廳
+                             <strong>かさの家：</strong><br>
+                             🍱 梅枝餅與定食的名店<br>
+                             🕐 營業時間：9:00～17:00<br>
+                             📅 定休日：不定休<br><br>
+                             <strong>さいふうどん：</strong><br>
+                             🍜 太宰府在地烏龍麵專門店<br>
+                             🕐 營業時間：11:00～15:00<br>
+                             📅 定休日：週三
                          </div>
                      </div>
                  </div>
@@ -1542,7 +1548,7 @@
                      <tr><td>🍳 早餐 & 逛湯之坪街道</td><td>¥5,000 (約 NT$ 1,100)</td></tr>
                      <tr><td>⛽ 油費（當日估算）</td><td>¥3,000 (約 NT$ 660)</td></tr>
                      <tr><td>🛍️ 道之驛伴手禮（由布院+浮羽）</td><td>¥8,000 (約 NT$ 1,760)</td></tr>
-                     <tr><td>🍜 午餐（太宰府）</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
+                     <tr><td>🍜 午餐（かさの家或さいふうどん）</td><td>¥6,000 (約 NT$ 1,320)</td></tr>
                      <tr><td>🅿️ 停車費（太宰府）</td><td>¥500 (約 NT$ 110)</td></tr>
                      <tr><td>🥐 ぐうぱん麵包</td><td>¥2,000 (約 NT$ 440)</td></tr>
                      <tr><td>🍽️ 晚餐 與青蓉聚餐</td><td>¥10,000 (約 NT$ 2,200)</td></tr>
